@@ -145,7 +145,7 @@ my $libdir = "@datadir@/@PACKAGE@-@APIVERSION@";
 my $IGNORE_PATTERN = '^\s*##([^#\n].*)?\n';
 my $WHITE_PATTERN = '^\s*' . "\$";
 my $COMMENT_PATTERN = '^#';
-my $TARGET_PATTERN='[$a-zA-Z_.@][-.a-zA-Z0-9_(){}/$+@]*';
+my $TARGET_PATTERN='[$a-zA-Z_.@%][-.a-zA-Z0-9_(){}/$+@%]*';
 # A rule has three parts: a list of targets, a list of dependencies,
 # and optionally actions.
 my $RULE_PATTERN =
@@ -7256,6 +7256,11 @@ sub rule_define ($$$$)
     if ($cond
 	? ! exists $target_conditional{$target}
 	: exists $target_conditional{$target});
+
+  # A GNU make-style pattern rule has a single "%" in the target name.
+  msg ('portability', $where,
+       "`%'-style pattern rules are a GNU make extension")
+    if $target =~ /^[^%]*%[^%]*$/;
 
   # Value here doesn't matter; for targets we only note existence.
   $targets{$target} = $where;
