@@ -1,0 +1,24 @@
+#!/bin/sh
+
+# Test to make sure that -Wportability understands %-style pattern
+# rules.
+
+. $srcdir/defs
+
+set -e
+
+cat >>configure.in <<EOF
+AC_PROG_CC
+EOF
+
+cat >Makefile.am <<EOF
+bin_PROGRAMS = liver
+liver_SOURCES = foo.c
+
+%.o: %.c
+	echo "gnu make extension"
+EOF
+
+$ACLOCAL
+$AUTOMAKE -Wportability && exit 1
+exit 0
