@@ -1,3 +1,12 @@
+2002-08-17  Tom Tromey  <tromey@redhat.com>
+
+	For PR automake/347:
+	* automake.in (rule_define): Given portability warning if "%" seen
+	in target name.
+	(TARGET_PATTERN): Added `%'.
+	* tests/Makefile.am (TESTS): Added percent.test.
+	* tests/percent.test: New file.
+
 2002-08-15  Art Haas  <ahaas@neosoft.com>
 
 	* lib/am/depend2.am: Use correct name for dependency file in
